# dotrc

./: .gitignore  README.md  apply_home_settings.sh  apply_root_settings.sh  create_new_user.sh  gen_mk.sh  install_packages.sh  usefull_info  usefull_info.txt  usefull_info_win  usefull_info_win.txt
home_settings/: .XCompose  .Xmodmap  .Xresources  .agignore  .apvlvrc  .bashrc  .gdbinit  .gitconfig  .glivrc  .inputrc  .mbsyncrc  .minirc.dfl  .msmtprc  .muttrc  .profile  .spacemacs  .uncrustify.cfg  .vimrc  .xinitrc  .xsessionrc
home_settings/.android/: adb_usb.ini
home_settings/.anki/addons/: my_addon.py
home_settings/.claws-mail/: clawsrc  menurc
home_settings/.config/dunst/: dunstrc
home_settings/.config_xdg/: BT_MAC.sh  mimeapps.list  ripgreprc
home_settings/.config_xdg/alacritty/: alacritty.yml
home_settings/.config_xdg/evolution/: accels
home_settings/.config_xdg/fontconfig/: fonts.conf
home_settings/.config_xdg/foot/: foot.ini
home_settings/.config_xdg/i3/: config
home_settings/.config_xdg/i3status/: config
home_settings/.config_xdg/kak/: kakrc
home_settings/.config_xdg/keepassxc/: keepassxc.ini
home_settings/.config_xdg/mako/: config
home_settings/.config_xdg/neomutt/: neomuttrc
home_settings/.config_xdg/smplayer/: smplayer.ini
home_settings/.config_xdg/sway/: config
home_settings/.config_xdg/transmission/: settings.json
home_settings/.config_xdg/uzbl/: config  style.css
home_settings/.config_xdg/vifm/: vifmrc
home_settings/.config_xdg/vimb/: bookmark  config
home_settings/.config_xdg/vlc/: vlcrc
home_settings/.config_xdg/zathura/: zathurarc
home_settings/.data_xdg/applications/: web_browser.desktop
home_settings/.data_xdg/remmina/: home_pc.remmina
home_settings/.doom.d/: config.el  init.el
home_settings/.emacs.d/: spacemacs-dark-modified-theme.el
home_settings/.goldendict/: config
home_settings/.mmh/: profile
home_settings/.mplayer/: config
home_settings/.ssh/: config
home_settings/.urxvt/ext/: my-handle-buffer  vtwheel
home_settings/.vifm/: vifmrc
home_settings/.vim/: keymap  spell  syntax
home_settings/.vim/ftplugin/: glanguage_common.vim  glanguage_de.vim  glanguage_en.vim
other_files/: Makefile_bviplus  Makefile_coreutils_viewer  Makefile_dmenu  Makefile_dmenu.mk  Makefile_emacs  Makefile_emacs.mk  Makefile_hed.mk  Makefile_nvim  Makefile_nvim.mk  Makefile_rtags  Makefile_rtags.mk  Makefile_st_terminal.mk  Makefile_vifm  Makefile_vifm.mk  Makefile_vim.mk  Makefile_vimb  Makefile_vimb.mk  alsaplayer.sh  alsaplayer_listen_from_last_played_position.sh  alsaplayer_play_files.sh  alsaplayer_play_files_random_order.sh  alsaplayer_save_last_played_position.sh  apply_i3_config.sh  apply_project_settings.sh  audio_device_toggle.sh  audio_player_play_files.sh  audio_player_play_files_random_order.sh  bc_library_my  bin_dump_extract_strings.py  bluetooth_connected.sh  bluetooth_switch_sinks_sources.sh  bluetooth_toggle.sh  bluetooth_toggle_hotkey.sh  bluetooth_toggle_profile.py  bootstrap.sh  check_for_new_emails.py  check_for_new_emails.sh  check_program.sh  choose_directory.sh  compress.sh  (+153 more)
other_files/firefox/: readme.txt
other_files/google_chrome/: readme.txt
other_files/icedove_thunderbird/: profile_prefs.js  readme.txt  settings.txt  signature.txt
other_files/interp_python/: client.py  server.py
other_files/my_samples/multiple_sources/cmake/gtest/: CMakeLists.txt  main.cpp
other_files/my_samples/multiple_sources/cmake/labyrinth/: CMakeLists.txt  core.c  core.h  graphics.c  graphics.h  main.c  myAlgorytm.c  recursiveDivision.c
other_files/my_samples/multiple_sources/cmake/lib/exec_src/: CMakeLists.txt  file1.cxx  file1.h  main.cpp
other_files/my_samples/multiple_sources/cmake/sanitizers__fault_injection/: .issues_filter.sh  .lvimrc  CMakeLists.txt  main.c
other_files/my_samples/multiple_sources/cmake/sanitizers__fault_injection/customer_lib/lib/: CMakeLists.txt
other_files/my_samples/multiple_sources/cmake/sanitizers__fault_injection/customer_lib/lib/inc/: customer.h  status.h
other_files/my_samples/multiple_sources/cmake/sanitizers__fault_injection/customer_lib/lib/inc/internal_inc/: definitions.h  wrappers.h
other_files/my_samples/multiple_sources/cmake/sanitizers__fault_injection/customer_lib/lib/src/: customer.c  status.c
other_files/my_samples/multiple_sources/cmake/sanitizers__fault_injection/customer_lib/tests/: CMakeLists.txt  assert_wrappers.h  check_all.sh  main.c  single_customer_fixture.h  tests_api.c  tests_fiu.c
other_files/my_samples/multiple_sources/cmake/unity_unit_test_framework/: .lvimrc  CMakeLists.txt
other_files/my_samples/multiple_sources/cmake/unity_unit_test_framework/lib_unity/: CMakeLists.txt
other_files/my_samples/multiple_sources/cmake/unity_unit_test_framework/src/: all_tests.c  single_customer.c
other_files/not_used_anymore/: bc_library_my  restart_microsoft_teams.sh  start_teamviewer.sh  suspend_hotkey.sh  suspend_on_idle.sh  torrent_download.sh  torrent_download_local.sh  torrent_download_remote.sh  torrent_status.sh
other_files/old_home_settings/: .keynavrc  .spacemacs  germany_info.txt  synergy.conf
other_files/python/: run.sh  startup.py
other_files/qemu_bridge_setup/: README
other_files/raspberry_pi/: readme.txt  upgrade.sh
other_files/snippets/: snippets.py  snippets.sh
other_files/unused/: bluetooth_toggle.sh  get_running_sink_name.py  get_sink_name.sh  get_volume.sh
other_files/vim_prj_settings_template/: .issues_filter.sh  .lvimrc
other_files/vimium/: allow_access_to_file_urls  custom_key_mappings  custom_search_engines  excluded_URLs_and_keys
root_settings/etc/: fstab  hosts  locale.gen  motd  sudoers
windows/: apply_home_settings.bat  apply_root_settings.bat  settings.bat  usefull_info_win.txt
windows/desktop_bat_files/: control_panel.bat  download_from_miniserve.bat  edit.bat  git_bash.bat
windows/home_settings/: .bashrc  .gitconfig  .minttyrc  .vimrc
windows/other_files/: autologin.reg  edit_bat_files.reg  outlook_mail_to.py  start_mobile_hotspot.ps1  toggle_touchpad.bat  vim_cmd_exe_wrapper.bat
(+323 files in other folders)
